# synergy

Ознакомительная практика 2 семестр/Кейс-задача №1/: main.py
Ознакомительная практика 2 семестр/Кейс-задача №2/: main.py
Ознакомительная практика 2 семестр/Кейс-задача №3/: README.md
Ознакомительная практика 2 семестр/Кейс-задача №3/database/: setup.sql
Ознакомительная практика 2 семестр/Кейс-задача №3/src/: DelphiWebService.dproj
Ознакомительная практика 2 семестр/Кейс-задача №4/: README.md
Ознакомительная практика 2 семестр/Кейс-задача №5/: README.md
Производственная практика 2 курс/2.4/: CMakeLists.txt
Производственная практика 2 курс/2.4/include/: binary_tree.h  heap.h  queue.h
Производственная практика 2 курс/2.4/src/: binary_tree.cpp  heap.cpp  queue.cpp
Производственная практика 2 курс/2.4/tests/: test_bst.cpp  test_heap.cpp  test_queue.cpp
Производственная практика 2 курс/2.5/: generate_org_page.py  org.json
Производственная практика 2 курс/2.5/output/: index.html
